# modfinger-tuner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  skin-system.md  testing.md  threading.md
docs/skins/: crt_green.json  midnight_purple.json  nord.json  ocean.json  vintage_amber.json
skins/: dark.json  eighties_neon.json
source/: Pitch.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TunerPalette.h  YinDetector.cpp  YinDetector.h
source/dsp/: PyinDetector.cpp  PyinDetector.h  YinDetector.h
source/ui/: SkinLibrary.cpp  SkinLibrary.h  SkinManager.cpp  SkinManager.h  TunerPalette.h
tests/: PitchTests.cpp  ProcessorTests.cpp  PyinDetectorTests.cpp  YinDetectorTests.cpp
